20111020  Thu Oct 20 17:00:29 PDT 2011
    Promoted to full release

20111017.2055_002  Mon Oct 17 20:55:09 PDT 2011
    Bug Fix
    * Move inject_if_block code back to MSM [github #40]

20110927.2305_001  Tue Sep 27 23:05:02 PDT 2011
    Bug Fix
    * Remove spurious error for modifiers in roles [github #36]


20110923.1726  Fri Sep 23 17:27:47 PDT 2011
    Distribution Fixes
    * 20110923 had a bad signature file because gpg is broken on my laptop.
      Releasing without a signature.  1 aM n0t A hax0r!!!1!1!


20110923  Fri Sep 23 16:13:46 PDT 2011  [It Takes All Types]
    Incompatible Changes
    * Slurpy parameters (@foo and %bar) now must come at the end.
    * Slurpy parameters cannot be named, they must be positional.
    * Slurpy parameters are now optional by default. [github #21]
    * The empty signature takes no arguments. [github #26]
    * No signature implies the empty signature and takes no arguments.
      [github #26]

    New Features
    * Now checking if there are too many arguments. [github #23]
    * Run-time errors are now class methods, so subclasses can override them.
    * Method::Signatures::Modifiers allows you to use Method::Signatures
      with MooseX::Declare and apply method modifiers like before, after
      and around. [Buddy Burden] [github #14]
    * compile_at_BEGIN option controls if "method" and "func" are compiled
      like normal statements or early like "sub". [github #8]

    Bug Fixes
    * Now depending on a version of Devel::Declare that works with
      5.13 and up. [github #10]
    * Now depending on a known good version of Mouse. [github #17]
    * Improved error messages reporting from the right position in the
      user's code. [Buddy Burden]
    * Comments in the signature fixed. [Buddy Burden] [github #13]
    * Passing in too many positional parameters now generates an error.
      [github #23]
    * Fixed a case where we'd eat compilation errors. [github #16]