@@ -5,12 +5,13 @@ author:
 build_requires:
   Module::Build: 0.26
   Test::Builder: 0.82
+  Test::Exception: 0.29
   Test::More: 0.82
   Test::Warn: 0.10
 configure_requires:
   Module::Build: 0.26
 dynamic_config: 1
-generated_by: 'Module::Build version 0.38, CPAN::Meta::Converter version 2.112621'
+generated_by: 'Module::Build version 0.38, CPAN::Meta::Converter version 2.110930'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -19,13 +20,15 @@ name: Method-Signatures
 provides:
   Method::Signatures:
     file: lib/Method/Signatures.pm
-    version: 20111020
+    version: 20111125
   Method::Signatures::Modifiers:
     file: lib/Method/Signatures/Modifiers.pm
     version: 0
   Method::Signatures::Parser:
     file: lib/Method/Signatures/Parser.pm
     version: 0
+recommends:
+  Moose: 0.96
 requires:
   Any::Moose: 0.11
   Const::Fast: 0.006
@@ -42,4 +45,4 @@ resources:
   bugtracker: http://rt.cpan.org/NoAuth/Bugs.html?Dist=Method-Signatures
   license: http://dev.perl.org/licenses/
   repository: https://github.com/schwern/method-signatures/tree
-version: 20111020
+version: 20111125
